# partial-builder

./: CHANGELOG.md  README.md  flake.nix  partial-builder.cabal
src/: PartialBuilder.hs
